--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>LEARN TO CODE.</h1>
-        <h1>LEARN TO BE CREATIVE.</h1>
-        <p>Progate is a web service where you can learn programming online.</p>
-        <p>We offer you a fully equipped coding environment to get you started.</p>
+        <h1>GLOWING PURPLE.</h1>
+        <h1>MELATIH KREATIFITAS.</h1>
+        <p>Mengubah sampah pelastik.</p>
+        <p>Menjadi hiasan.</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Sign up with Email</a>
           <p>or</p>
